--- a/asporto/index.html
+++ b/asporto/index.html
@@ -73,34 +73,28 @@
 <!-- fine navbar con hamburger -->
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
-            <div class="small-12 columns">
+            <!-- <div class="small-12 columns">
                 <h1 class="text-highlight" itemprop="description">Hamburger a casa tua.<br>Caldo, in meno di 30 minuti.</h1>
-            </div>
+            </div> -->
         </div>
     </header>
     <div class="panel-asporto">
-        <!-- <div class="row">
-            <div class="medium-12 large-12 columns panel clearfix">
-                <h1>Chiusura festività</h1>
-                <p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
-            </div>
-        </div> -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto e Consegne a Domicilio</h1>
+                <h1>Asporto</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Venerdì</strong>, <strong>Sabato</strong> e <strong>Domenica</strong>: dalle 19:00 alle 21:00</p>
-                <!-- <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
+                <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
+                <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
-                <h4>Effettuiamo le consegne a Filottrano, Sant'Ignazio, Imbrecciata, Montoro e San Biagio.</h4>
+                <h4>Il Servizio di <strong>Consegna a Domicilio</strong> riprenderà a Settembre</h4>
             </div>
         </div>
         <div class="row">
@@ -123,33 +117,29 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
-                            <p>Hamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
-                        </li>
-                        <li>
-                            <h3>Bocconcini di Pollo &emsp; 5,5</h3>
+                            <h3>Bocconcini di Pollo &emsp; 5,9</h3>
                             <p>Serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 5</h3>
+                            <h3>Peperoncini Piccanti &emsp; 5,5</h3>
                             <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
-                            <h3>Olive all'Ascolana &emsp; 5</h3>
+                            <h3>Olive all'Ascolana &emsp; 5,5</h3>
                             <p>Il più tipico street food marchigiano</p>
                         </li>
                         <li>
-                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+                            <h3>Mozzarelle Fritte &emsp; 5,9</h3>
                             <p>Servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Cipolle Rosse &emsp; 4,5</h3>
+                            <h3>Cipolle Rosse &emsp; 4,9</h3>
                             <p>Cipolla rossa in tempura</p>
                         </li>
                         <li>
-                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+                            <h3>Frittelline di Fagioli e Porri &emsp; 5,5</h3>
                             <p>Servite con salsa alla senape fatta in casa</p>
                         </li>
                         <li>
@@ -162,13 +152,13 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per i Più Piccoli</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Mini Burger e Patatine &emsp; 6,5</h3>
+                            <h3>Mini Burger e Patatine &emsp; 6,9</h3>
                             <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
                         </li>
                         <li>
-                            <h3>Bocconcini e Patatine &emsp; 6,5</h3>
+                            <h3>Bocconcini e Patatine &emsp; 6,9</h3>
                             <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
                         </li>
                     </ul>
@@ -176,14 +166,14 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <h2 class="subheader">Hamburger Classici<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
                             <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
+                            <h3>New York &emsp; 9,5 / doppio 14,9</h3>
                             <p>Manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
@@ -191,7 +181,7 @@
                             <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
+                            <h3>Pollo &emsp; 9,5 / doppio 14,9</h3>
                             <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                     </ul>
@@ -199,46 +189,38 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Stagionali (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <h2 class="subheader">Hamburger Stagionali<br><small>Hamburger da 180 grammi. serviti con patate fritte e a cottura media</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Pulled Pork &emsp; 10,5</h3>
                             <p>Maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Cacio e Pepe &emsp; 10,5 / doppio 14,9</h3>
-                            <p>Manzo, pecorino vallesina, guanciale, pepe</p>
+                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
                         </li>
                         <li>
                             <h3>Carbonara &emsp; 10,9 / doppio 14,9</h3>
                             <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
                         <li>
-                            <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
-                            <p>Manzo, gorgonzola, guanciale croccante, pomodorini confit</p>
+                            <h3>Greco &emsp; 9,5 / doppio 14,9</h3>
+                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Vegetariani e di Pesce<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <h2 class="subheader">Hamburger Vegetariani</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                           <li>
-                            <h3>Vegetariano Fagioli &emsp; 8,9</h3>
+                            <h3>Vegetariano Fagioli &emsp; 9,5</h3>
                             <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria</p>
                         </li>
                         <li>
-                            <h3>Vegetariano Quinoa &emsp; 8,9</h3>
+                            <h3>Vegetariano Quinoa &emsp; 9,5</h3>
                             <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
-                        </li>
-                        <li>
-                            <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
-                            <p>Hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
-                        </li>
-                        <li>
-                            <h3>Persico &emsp; 12,5 / doppio 16,5</h3>
-                            <p>Hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
                         </li>
                     </ul>
                 </div>
@@ -246,7 +228,7 @@
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Carni <br></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine &emsp; 13,9</h3>
                             <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
@@ -255,10 +237,6 @@
                             <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
                         </li>
-                        <li>
-                            <h3>Cotoletta alla Milanese &emsp; 21</h3>
-                            <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patate fritte</p>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -266,27 +244,32 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>Brownie con nocciole, servito con mousse di crema chantilly</p>
+                                <h3>Crumble &emsp; 5</h3>
+                                <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
+                            </li>
+                            <li>
+                                <h3>Cioccolatosa &emsp; 5</h3>
+                                <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
                             </li>
                             <li>
-                                <h3>Whoop &emsp; 5</h3>
-                                <p>Morbido biscotto di cioccolato ripieno con crema di  burro di arichidi</p>
+                                <h3>Panna Cotta &emsp; 5</h3>
+                                <p>Ai frutti di bosco</p>
+                            </li>
+                            <li>
+                                <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
+                                <p>Cantucci e anicetti artigianali, serviti con vino di visciole</p>
                             </li>
                         </ul>
-                        <blockquote>
-                            <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
-                        </blockquote>
                         <br>
                     </div>
                     <div class="title-divider">
-                        <p class="text-center">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br>I prodotti contengono allergeni: richiedi la lista al personale.</p>
+                        <p class="">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
                         <br>
                     </div>
                 </div>
@@ -313,14 +296,14 @@
 		  			<li>
 						<h4 class="subheader">Prenota</h4>
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
+						<!-- <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p> -->
 					</li>
 		  			<li>
-                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
