--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -167,14 +167,14 @@
 		  			<li>
 						<h4 class="subheader">Prenota</h4>
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
+						<!-- <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p> -->
 					</li>
 		  			<li>
-                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
