--- a/index.html
+++ b/index.html
@@ -93,26 +93,33 @@
 			</div>
 		</div>
 		<div class="row">
-			<!-- <div class="medium-6 large-6 columns">
-				<h2>Ristorante</h2>
-				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
-			</div> -->
 			<div class="medium-6 large-6 columns">
-				<h2>Asporti e Consegne a Domicilio</h2>
-				<p>Dal <strong>Venerdì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>21:00</strong></p>
+				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
+				<p>Aperto tutti i giorni solo all'esterno <br>Dalle 19:00 alle 23:00</p>
+                <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+			</div>
+			<div class="medium-6 large-6 columns">
+				<span class="show-for-small extra-space"></span>
+				<h2>Asporto</h2>
+				<p>Tutti i giorni<br>Dalle 19:00 alle 22:00</p>
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
+                <span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+
 			</div>
 		</div>
-		<div class="row">
+		<!-- <div class="row">
 			<div class="medium-12 large-12 columns">
 				<br>
 				<span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
 				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
 				<span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<div class="panel-home-2n">
 		<div class="row">
@@ -213,14 +220,14 @@
 					<li>
 						<h4 class="subheader">Prenota</h4>
 						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
+						<!-- <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p> -->
 					</li>
 					<li>
-                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
