--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -142,11 +142,11 @@
                         </p>
                     </li>
                     <li>
-                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
-                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
+                        <h4 class="subheader">Orari</h4>
+                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
