--- a/contatti/index.html
+++ b/contatti/index.html
@@ -75,7 +75,7 @@
                 <h6>Telefono:
                     <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
                 </h6>
-                <h6>Ordina e Prenota Online:
+                <h6>Ordina Online:
                     <a href="https://m.me/cavecchiabeerstrot"><span itemprop="telephone">Messenger</span></a>
                 </h6>
                 <h6>Email:
