--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
 				<p>Aperto tutti i giorni solo all'esterno <br>Dalle 19:00 alle 23:00</p>
                 <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Prenota</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
