--- a/contatti/index.html
+++ b/contatti/index.html
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="medium-6 large-6 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h2>Ca' Vecchia Beerstrot</h2>
-                <h6>Telefono:
+                <h6>Prenota:
                     <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
                 </h6>
                 <h6>Ordina Online:
