--- a/menu/index.html
+++ b/menu/index.html
@@ -287,10 +287,10 @@
                             <h3>Castelli Italicum</h3>
                             <p>Bionda fruttata 5,0%</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Gambrinus Weisse</h3>
                             <p>Weisse 5,2%</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>MC-77 Sofronia</h3>
                             <p>Blanche con ibisco 5%</p>
@@ -307,6 +307,10 @@
                          <li>
                             <h3>MC-77 Ape Regina</h3>
                             <p>Blonde ale al miele 6,9%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Brevis Furor</h3>
+                            <p>IPA 6,3%</p>
                         </li>
                         <!-- <li>
                             <h3>MC-77 Italian Farmer </h3>
