--- a/menu/index2.html
+++ b/menu/index2.html
@@ -22,7 +22,7 @@
     <meta property="og:image:url" content="https://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -77,7 +77,7 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <ul class="accordion" data-accordion>
                         <li class="accordion-navigation">
-                            <a href="#panel1a" class="subheader">PER STUZZICARE -></a>
+                            <a href="#panel1a" class="subheader">PER STUZZICARE &rarr;</a>
                             <div id="panel1a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -116,7 +116,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                            <a href="#panel2a" class="subheader">PER I PIU' PICCOLI -></a>
+                            <a href="#panel2a" class="subheader">PER I PIU' PICCOLI &rarr;</a>
                             <div id="panel2a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -131,7 +131,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                            <a href="#panel3a" class="subheader">HAMBURGER CLASSICI (180 grammi) -><br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media</small></a>
+                            <a href="#panel3a" class="subheader">HAMBURGER CLASSICI (180 grammi) &rarr;<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media</small></a>
                             <div id="panel3a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -154,7 +154,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                        <a href="#panel4a" class="subheader">HAMBURGER STAGIONALI (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media</small></a>
+                        <a href="#panel4a" class="subheader">HAMBURGER STAGIONALI (180 grammi) &rarr;<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media</small></a>
                             <div id="panel4a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -177,7 +177,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                        <a href="#panel5a" class="subheader">HAMBURGER VEGETARIANI</a>
+                        <a href="#panel5a" class="subheader">HAMBURGER VEGETARIANI &rarr;</a>
                             <div id="panel5a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -192,7 +192,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                        <a href="#panel6a" class="subheader">CARNI</a>
+                        <a href="#panel6a" class="subheader">CARNI &rarr;</a>
                             <div id="panel6a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
@@ -207,7 +207,7 @@
                             </div>
                         </li>
                         <li class="accordion-navigation">
-                            <a href="#panel7a" class="subheader">DOLCI<br><small>Fatti in casa</small></a>
+                            <a href="#panel7a" class="subheader">DOLCI &rarr;<br><small>Fatti in casa</small></a>
                             <div id="panel7a" class="content">
                                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                                     <li>
