--- a/menu/index.html
+++ b/menu/index.html
@@ -351,10 +351,14 @@
                                 <h3>Mukkeller Wanda 50cl &emsp; 6</h3>
                                 <p>Ipa 6,9% </p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Mukkeller Marina 50cl &emsp; 6</h3>
                                 <p>American pale ale 6,4%</p>
-                            </li> -->
+                            </li>
+                            <li>
+                                <h3>Mukkeller Hattori Hanzo 50cl &emsp; 6</h3>
+                                <p>Doppia IPA 8,3%</p>
+                            </li>
                             <!-- <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>Nera tedesca 5,5% </p>
