--- a/menu/index.html
+++ b/menu/index.html
@@ -339,6 +339,10 @@
                                 <h3>Zotler Weisse 50cl &emsp; 6</h3>
                                 <p>Weisse 5,2% </p>
                             </li>
+                            <li>
+                                <h3>Hirsch Dopple 50cl &emsp; 6</h3>
+                                <p>Rossa tedesca 7,2%</p>
+                            </li>
 <!--                             <li>
                                 <h3>Gambrinus Zwickel 50cl &emsp; 6</h3>
                                 <p>Bionda tedesca non filtrata 4,9%</p>
@@ -359,10 +363,10 @@
                                 <h3>Mukkeller Hattori Hanzo 50cl &emsp; 6</h3>
                                 <p>Doppia IPA 8,3%</p>
                             </li>
-                            <!-- <li>
+                            <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>Nera tedesca 5,5% </p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Castelli Calix 33cl &emsp; 6</h3>
                                 <p>Stout 6,7%</p>
