--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 			</div>
 		</div>
 	</header>
+	<script>
+		alert("Oggi Lunedì 8 Maggio siamo chiusi per brutto tempo");  // display string message
+    </script>
 <!-- fine header -->
 	<div class="panel-home-n">
 		<!-- <div class="row">
