--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 	</header>
 	<script>
-		alert("Oggi Lunedì 8 Maggio siamo chiusi per brutto tempo");  // display string message
+		alert("Oggi Lunedì 8 Maggio siamo chiusi per brutto tempo");
     </script>
 <!-- fine header -->
 	<div class="panel-home-n">
