--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
 		src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
 	</noscript>
 <!-- End Facebook Pixel Code -->
+
+<!-- Alert popup -->
+
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script>
+    $("document").ready( function () {
+        alert("Oggi chiusi per pioggia");
+    });
+</script> -->
+
+<!-- End Alert popup -->
+
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -79,9 +91,6 @@
 			</div>
 		</div>
 	</header>
-	<script>
-		alert("Oggi Lunedì 8 Maggio siamo chiusi per brutto tempo");
-    </script>
 <!-- fine header -->
 	<div class="panel-home-n">
 		<!-- <div class="row">
