--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <!-- Alert popup -->
 	<script>
 	    $("document").ready( function () {
-	        alert("Oggi chiusi per pioggia");
+	        alert("Oggi chiusi per pioggia. Aperti per asporti");
 	    });
 	</script>
 <!-- End Alert popup -->
