--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
-
 <!-- Alert popup -->
-	<script>
+
+	<!-- <script>
 	    $("document").ready( function () {
 	        alert("Oggi chiusi per pioggia. Aperti per asporti");
 	    });
-	</script>
-<!-- End Alert popup -->
+	</script> -->
 
+<!-- End Alert popup -->
 </body>
 </html>
