--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 			<div class="medium-6 large-6 columns">
 				<div class="flex-video widescreen vimeo extra-space-video">
 					<a role="button" href="https://www.beerstrot.it/video/">
-						<iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
+						<!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe> -->
+						<iframe width="1280" height="720" src="https://www.youtube.com/embed/jVDlGrvFMyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</a>
 				</div>
 			</div>
