--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
 <!-- Alert popup -->
 
-	<!-- <script>
+	<script>
 	    $("document").ready( function () {
-	        alert("Oggi chiusi per pioggia. Aperti per asporti");
+	        alert("Oggi chiusi per pioggia.");
 	    });
-	</script> -->
+	</script>
 
 <!-- End Alert popup -->
 </body>
