--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
 <!-- Alert popup -->
 
 	<script>
-	    $("document").ready( function () {
-	        alert("Oggi chiusi per pioggia.");
-	    });
+		$(window).load(function() {
+      		alert("Oggi chiusi per pioggia.");
+		});
 	</script>
 
 <!-- End Alert popup -->
