--- a/menu/index.html
+++ b/menu/index.html
@@ -324,55 +324,55 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <li>
-                                <h3>Gambrinus Pils 50cl &emsp; 6</h3>
+                                <h3>Gambrinus Pils 50cl <span class="price">6</span></h3>
                                 <p>Bionda pils 4,9%</p>
                             </li>
                             <li>
-                                <h3>Zotler 1447 Naturtrub 50cl &emsp; 6</h3>
+                                <h3>Zotler 1447 Naturtrub 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca non filtrata 4,9%</p>
                             </li>
                             <li>
-                                <h3>Hirsch Hellerbock 50cl &emsp; 6</h3>
+                                <h3>Hirsch Hellerbock 50cl <span class="price">6</span></h3>
                                 <p>Keller tedesca 6,5%</p>
                             </li>
                             <li>
-                                <h3>Zotler Weisse 50cl &emsp; 6</h3>
+                                <h3>Zotler Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse 5,2% </p>
                             </li>
                             <li>
-                                <h3>Hirsch Dopple 50cl &emsp; 6</h3>
+                                <h3>Hirsch Dopple 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 7,2%</p>
                             </li>
 <!--                             <li>
-                                <h3>Gambrinus Zwickel 50cl &emsp; 6</h3>
+                                <h3>Gambrinus Zwickel 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca non filtrata 4,9%</p>
                             </li> -->
                             <li>
-                                <h3>Mukkeller Nonnukka 50cl &emsp; 6</h3>
+                                <h3>Mukkeller Nonnukka 50cl <span class="price">6</span></h3>
                                 <p>Ale bionda 4,8%</p>
                             </li>
                             <!-- <li>
-                                <h3>Mukkeller Wanda 50cl &emsp; 6</h3>
+                                <h3>Mukkeller Wanda 50cl <span class="price">6</span></h3>
                                 <p>Ipa 6,9% </p>
                             </li> -->
                             <li>
-                                <h3>Mukkeller Marina 50cl &emsp; 6</h3>
+                                <h3>Mukkeller Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Hattori Hanzo 50cl &emsp; 6</h3>
+                                <h3>Mukkeller Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3%</p>
                             </li>
                             <li>
-                                <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
+                                <h3>Mariahilfer Schwarze 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% </p>
                             </li>
                             <li>
-                                <h3>Castelli Calix 33cl &emsp; 6</h3>
+                                <h3>Castelli Calix 33cl <span class="price">6</span></h3>
                                 <p>Stout 6,7%</p>
                             </li>
 <!--                             <li>
-                                <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
+                                <h3>Gusswerk Zum Wohl 33cl <span class="price">6</span></h3>
                                 <p>tedesca senza glutine biologica 4,9%</p>
                             </li> -->
                         </ul>
