--- a/menu/index.html
+++ b/menu/index.html
@@ -308,8 +308,8 @@
                             <p>Blonde ale al miele 6,9%</p>
                         </li>
                         <li>
-                            <h3>Castelli Brevis Furor</h3>
-                            <p>IPA 6,3%</p>
+                            <h3>Mukkeller Hattori Hanzo</h3>
+                            <p>Doppia IPA 8,3%%</p>
                         </li>
                         <!-- <li>
                             <h3>MC-77 Italian Farmer </h3>
