--- a/menu/index.html
+++ b/menu/index.html
@@ -523,7 +523,7 @@
                         </li>
 
                         <li>
-                            <h3>Amaro del Capo, Fernet, Montenegro, Sambuca <span class="price">3</span></h3>
+                            <h3>Fernet, Montenegro, Sambuca <span class="price">3</span></h3>
                         </li>
                         <li>
                             <h3>Grappa Prime Uve <span class="price">3,5</span></h3>
