--- a/menu/index.html
+++ b/menu/index.html
@@ -230,10 +230,10 @@
                             <h3>Costine <span class="price">13,9</span></h3>
                             <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
                         </li>
-                    <!--   <li>
+                        <li>
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -303,9 +303,13 @@
                             <h3>Castelli Palmares</h3>
                             <p>Rossa stile inglese 5,6%</p>
                         </li>
-                         <li>
+                        <!-- <li>
                             <h3>MC-77 Ape Regina</h3>
                             <p>Blonde ale al miele 6,9%</p>
+                        </li> -->
+                        <li>
+                            <h3>Castelli Mirabilia</h3>
+                            <p>American Pale Ale 5,2%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Hattori Hanzo</h3>
